tests/negative/basic_tokenization_typical.em
int main() {
int x = 123abc;
return 0;
}